// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NavTabs does not require history 1`] = `
<TestProvider app={{...}}>
  <Provider router={{...}} app={{...}} history={{...}} nextId={[Function: nextId]}>
    <MuiThemeProviderOld theme={{...}}>
      <WithStyles(inject-NavTabs)>
        <inject-NavTabs classes={{...}}>
          <NavTabs classes={{...}} tabs={{...}} history={{...}} elevation={2}>
            <WithStyles(Paper) className="RSFNavTabs-root-500" elevation={2}>
              <Paper className="RSFNavTabs-root-500" elevation={2} classes={{...}} component="div" square={false}>
                <div className="MuiPaper-root-504 MuiPaper-elevation2-508 MuiPaper-rounded-505 RSFNavTabs-root-500">
                  <WithStyles(inject-TabsRow-with-app) initialSelectedIdx={{...}} onTabChange={[Function]} items={{...}} tabRenderer={[Function]} centered={true} classes={{...}}>
                    <inject-TabsRow-with-app initialSelectedIdx={{...}} onTabChange={[Function]} items={{...}} tabRenderer={[Function]} centered={true} classes={{...}}>
                      <TabsRow initialSelectedIdx={{...}} onTabChange={[Function]} items={{...}} tabRenderer={[Function]} centered={true} classes={{...}} app={{...}} variant="scrollable">
                        <WithStyles(Tabs) value={false} onChange={[Function]} indicatorColor="secondary" variant="scrollable" className="RSFTabsRow-root-533 RSFNavTabs-tabs-499" classes={{...}}>
                          <Tabs value={false} onChange={[Function]} indicatorColor="secondary" variant="scrollable" className="RSFTabsRow-root-533 RSFNavTabs-tabs-499" theme={{...}} classes={{...}} centered={false} component="div" fullWidth={false} scrollable={false} ScrollButtonComponent={[Function: WithStyles]} scrollButtons="auto" textColor="inherit">
                            <div className="MuiTabs-root-539 RSFTabsRow-root-533 RSFNavTabs-tabs-499 RSFTabsRow-root-533 RSFNavTabs-tabs-499" variant="scrollable">
                              <EventListener target="window" onResize={[Function: debounced]} />
                              <div className="MuiTabs-flexContainer-540 RSFTabsRow-centered-538">
                                <div className="MuiTabs-scroller-542 RSFTabsRow-scroller-536 MuiTabs-fixed-543" style={{...}} role="tablist" onScroll={[Function: debounced]}>
                                  <div className="MuiTabs-flexContainer-540 RSFTabsRow-centered-538">
                                    <WithStyles(NavTab) text="Tab 1" url="/1" state="{"page":"product"}" className={{...}} image={{...}} items={{...}} root={false} server={false} prefetch={{...}} loading={false} lazyItemsURL={{...}} expanded={false} classes={{...}} item={{...}} selected={false} onMouseEnter={[Function]} onMouseLeave={[Function]} onItemClick={[Function]} onClick={[Function]} fullWidth={false} indicator={false} onChange={[Function]} textColor="inherit" value={0}>
                                      <NavTab text="Tab 1" url="/1" state="{"page":"product"}" className={{...}} image={{...}} items={{...}} root={false} server={false} prefetch={{...}} loading={false} lazyItemsURL={{...}} expanded={false} item={{...}} selected={false} onMouseEnter={[Function]} onMouseLeave={[Function]} onItemClick={[Function]} onClick={[Function]} fullWidth={false} indicator={false} onChange={[Function]} textColor="inherit" value={0} classes={{...}}>
                                        <inject-Track-with-app event="topNavClicked" item={{...}}>
                                          <Track event="topNavClicked" item={{...}} app={{...}} trigger="onClick" onSuccess={[Function]} ampData={{...}}>
                                            <div className="RSFNavTab-tabWrapper-554" onClick={[Function]}>
                                              <WithStyles(inject-Link) state={[Function]} className="RSFNavTab-link-551" to="/1" prefetch={{...}} onClick={[Function]} anchorProps={{...}}>
                                                <inject-Link state={[Function]} className="RSFNavTab-link-551" to="/1" prefetch={{...}} onClick={[Function]} anchorProps={{...}} classes={{...}}>
                                                  <Link state={[Function]} className="RSFNavTab-link-551" to="/1" prefetch={{...}} onClick={[Function]} anchorProps={{...}} classes={{...}} history={{...}} router={{...}} location={{...}}>
                                                    <a onMouseEnter={[Function]} onMouseLeave={[Function]} data-th="nav" data-moov-link="on" className="RSFLink-root-556 RSFNavTab-link-551" style={[undefined]} onClick={[Function]} href="https://example.com/1">
                                                      <WithStyles(Tab) className="RSFNavTab-root-548 RSFTabsRow-tab-534 RSFNavTabs-tab-503" label="Tab 1" classes={{...}}>
                                                        <Tab className="RSFNavTab-root-548 RSFTabsRow-tab-534 RSFNavTabs-tab-503" label="Tab 1" classes={{...}} disabled={false} textColor="inherit">
                                                          <WithStyles(ButtonBase) focusRipple={true} className="MuiTab-root-557 MuiTab-textColorInherit-559 RSFNavTab-root-548 RSFTabsRow-tab-534 RSFNavTabs-tab-503" role="tab" aria-selected={[undefined]} disabled={false} onClick={[Function]}>
                                                            <ButtonBase focusRipple={true} className="MuiTab-root-557 MuiTab-textColorInherit-559 RSFNavTab-root-548 RSFTabsRow-tab-534 RSFNavTabs-tab-503" role="tab" aria-selected={[undefined]} disabled={false} onClick={[Function]} classes={{...}} centerRipple={false} component="button" disableRipple={false} disableTouchRipple={false} tabIndex="0" type="button">
                                                              <button className="MuiButtonBase-root-569 MuiTab-root-557 MuiTab-textColorInherit-559 RSFNavTab-root-548 RSFTabsRow-tab-534 RSFNavTabs-tab-503" onBlur={[Function]} onFocus={[Function]} onKeyDown={[Function]} onKeyUp={[Function]} onMouseDown={[Function]} onMouseLeave={[Function]} onMouseUp={[Function]} onTouchEnd={[Function]} onTouchMove={[Function]} onTouchStart={[Function]} tabIndex="0" type="button" disabled={false} role="tab" aria-selected={[undefined]} onClick={[Function]}>
                                                                <span className="MuiTab-wrapper-565">
                                                                  <span className="MuiTab-labelContainer-566">
                                                                    <span className="MuiTab-label-567 RSFNavTab-label-550">
                                                                      Tab 1
                                                                    </span>
                                                                  </span>
                                                                </span>
                                                                <NoSsr defer={false} fallback={{...}}>
                                                                  <WithStyles(TouchRipple) innerRef={[Function]} center={false}>
                                                                    <TouchRipple center={false} classes={{...}}>
                                                                      <TransitionGroup component="span" enter={true} exit={true} className="MuiTouchRipple-root-572" childFactory={[Function: childFactory]}>
                                                                        <span className="MuiTouchRipple-root-572" />
                                                                      </TransitionGroup>
                                                                    </TouchRipple>
                                                                  </WithStyles(TouchRipple)>
                                                                </NoSsr>
                                                              </button>
                                                            </ButtonBase>
                                                          </WithStyles(ButtonBase)>
                                                        </Tab>
                                                      </WithStyles(Tab)>
                                                    </a>
                                                  </Link>
                                                </inject-Link>
                                              </WithStyles(inject-Link)>
                                            </div>
                                          </Track>
                                        </inject-Track-with-app>
                                      </NavTab>
                                    </WithStyles(NavTab)>
                                    <WithStyles(NavTab) text="Tab 1" url="/2" state="{"page":"product"}" className={{...}} image={{...}} items={{...}} root={false} server={false} prefetch={{...}} loading={false} lazyItemsURL={{...}} expanded={false} classes={{...}} item={{...}} selected={false} onMouseEnter={[Function]} onMouseLeave={[Function]} onItemClick={[Function]} onClick={[Function]} fullWidth={false} indicator={false} onChange={[Function]} textColor="inherit" value={1}>
                                      <NavTab text="Tab 1" url="/2" state="{"page":"product"}" className={{...}} image={{...}} items={{...}} root={false} server={false} prefetch={{...}} loading={false} lazyItemsURL={{...}} expanded={false} item={{...}} selected={false} onMouseEnter={[Function]} onMouseLeave={[Function]} onItemClick={[Function]} onClick={[Function]} fullWidth={false} indicator={false} onChange={[Function]} textColor="inherit" value={1} classes={{...}}>
                                        <inject-Track-with-app event="topNavClicked" item={{...}}>
                                          <Track event="topNavClicked" item={{...}} app={{...}} trigger="onClick" onSuccess={[Function]} ampData={{...}}>
                                            <div className="RSFNavTab-tabWrapper-554" onClick={[Function]}>
                                              <WithStyles(inject-Link) state={[Function]} className="RSFNavTab-link-551" to="/2" prefetch={{...}} onClick={[Function]} anchorProps={{...}}>
                                                <inject-Link state={[Function]} className="RSFNavTab-link-551" to="/2" prefetch={{...}} onClick={[Function]} anchorProps={{...}} classes={{...}}>
                                                  <Link state={[Function]} className="RSFNavTab-link-551" to="/2" prefetch={{...}} onClick={[Function]} anchorProps={{...}} classes={{...}} history={{...}} router={{...}} location={{...}}>
                                                    <a onMouseEnter={[Function]} onMouseLeave={[Function]} data-th="nav" data-moov-link="on" className="RSFLink-root-556 RSFNavTab-link-551" style={[undefined]} onClick={[Function]} href="https://example.com/2">
                                                      <WithStyles(Tab) className="RSFNavTab-root-548 RSFTabsRow-tab-534 RSFNavTabs-tab-503" label="Tab 1" classes={{...}}>
                                                        <Tab className="RSFNavTab-root-548 RSFTabsRow-tab-534 RSFNavTabs-tab-503" label="Tab 1" classes={{...}} disabled={false} textColor="inherit">
                                                          <WithStyles(ButtonBase) focusRipple={true} className="MuiTab-root-557 MuiTab-textColorInherit-559 RSFNavTab-root-548 RSFTabsRow-tab-534 RSFNavTabs-tab-503" role="tab" aria-selected={[undefined]} disabled={false} onClick={[Function]}>
                                                            <ButtonBase focusRipple={true} className="MuiTab-root-557 MuiTab-textColorInherit-559 RSFNavTab-root-548 RSFTabsRow-tab-534 RSFNavTabs-tab-503" role="tab" aria-selected={[undefined]} disabled={false} onClick={[Function]} classes={{...}} centerRipple={false} component="button" disableRipple={false} disableTouchRipple={false} tabIndex="0" type="button">
                                                              <button className="MuiButtonBase-root-569 MuiTab-root-557 MuiTab-textColorInherit-559 RSFNavTab-root-548 RSFTabsRow-tab-534 RSFNavTabs-tab-503" onBlur={[Function]} onFocus={[Function]} onKeyDown={[Function]} onKeyUp={[Function]} onMouseDown={[Function]} onMouseLeave={[Function]} onMouseUp={[Function]} onTouchEnd={[Function]} onTouchMove={[Function]} onTouchStart={[Function]} tabIndex="0" type="button" disabled={false} role="tab" aria-selected={[undefined]} onClick={[Function]}>
                                                                <span className="MuiTab-wrapper-565">
                                                                  <span className="MuiTab-labelContainer-566">
                                                                    <span className="MuiTab-label-567 RSFNavTab-label-550">
                                                                      Tab 1
                                                                    </span>
                                                                  </span>
                                                                </span>
                                                                <NoSsr defer={false} fallback={{...}}>
                                                                  <WithStyles(TouchRipple) innerRef={[Function]} center={false}>
                                                                    <TouchRipple center={false} classes={{...}}>
                                                                      <TransitionGroup component="span" enter={true} exit={true} className="MuiTouchRipple-root-572" childFactory={[Function: childFactory]}>
                                                                        <span className="MuiTouchRipple-root-572" />
                                                                      </TransitionGroup>
                                                                    </TouchRipple>
                                                                  </WithStyles(TouchRipple)>
                                                                </NoSsr>
                                                              </button>
                                                            </ButtonBase>
                                                          </WithStyles(ButtonBase)>
                                                        </Tab>
                                                      </WithStyles(Tab)>
                                                    </a>
                                                  </Link>
                                                </inject-Link>
                                              </WithStyles(inject-Link)>
                                            </div>
                                          </Track>
                                        </inject-Track-with-app>
                                      </NavTab>
                                    </WithStyles(NavTab)>
                                  </div>
                                  <WithStyles(TabIndicator) className="MuiTabs-indicator-547 RSFTabsRow-indicator-531 RSFTabsRow-noSelection-532" color="secondary" style={{...}}>
                                    <TabIndicator className="MuiTabs-indicator-547 RSFTabsRow-indicator-531 RSFTabsRow-noSelection-532" color="secondary" style={{...}} classes={{...}}>
                                      <span className="MuiPrivateTabIndicator-root-579 MuiPrivateTabIndicator-colorSecondary-581 MuiTabs-indicator-547 RSFTabsRow-indicator-531 RSFTabsRow-noSelection-532" style={{...}} />
                                    </TabIndicator>
                                  </WithStyles(TabIndicator)>
                                </div>
                              </div>
                            </div>
                          </Tabs>
                        </WithStyles(Tabs)>
                      </TabsRow>
                    </inject-TabsRow-with-app>
                  </WithStyles(inject-TabsRow-with-app)>
                </div>
              </Paper>
            </WithStyles(Paper)>
          </NavTabs>
        </inject-NavTabs>
      </WithStyles(inject-NavTabs)>
    </MuiThemeProviderOld>
  </Provider>
</TestProvider>
`;

exports[`NavTabs renders 1`] = `
<TestProvider app={{...}}>
  <Provider router={{...}} app={{...}} history={{...}} nextId={[Function: nextId]}>
    <MuiThemeProviderOld theme={{...}}>
      <WithStyles(inject-NavTabs)>
        <inject-NavTabs classes={{...}}>
          <NavTabs classes={{...}} tabs={{...}} history={{...}} elevation={2}>
            <WithStyles(Paper) className="RSFNavTabs-root-2" elevation={2}>
              <Paper className="RSFNavTabs-root-2" elevation={2} classes={{...}} component="div" square={false}>
                <div className="MuiPaper-root-6 MuiPaper-elevation2-10 MuiPaper-rounded-7 RSFNavTabs-root-2">
                  <WithStyles(inject-TabsRow-with-app) initialSelectedIdx={{...}} onTabChange={[Function]} items={{...}} tabRenderer={[Function]} centered={true} classes={{...}}>
                    <inject-TabsRow-with-app initialSelectedIdx={{...}} onTabChange={[Function]} items={{...}} tabRenderer={[Function]} centered={true} classes={{...}}>
                      <TabsRow initialSelectedIdx={{...}} onTabChange={[Function]} items={{...}} tabRenderer={[Function]} centered={true} classes={{...}} app={{...}} variant="scrollable">
                        <WithStyles(Tabs) value={false} onChange={[Function]} indicatorColor="secondary" variant="scrollable" className="RSFTabsRow-root-35 RSFNavTabs-tabs-1" classes={{...}}>
                          <Tabs value={false} onChange={[Function]} indicatorColor="secondary" variant="scrollable" className="RSFTabsRow-root-35 RSFNavTabs-tabs-1" theme={{...}} classes={{...}} centered={false} component="div" fullWidth={false} scrollable={false} ScrollButtonComponent={[Function: WithStyles]} scrollButtons="auto" textColor="inherit">
                            <div className="MuiTabs-root-41 RSFTabsRow-root-35 RSFNavTabs-tabs-1 RSFTabsRow-root-35 RSFNavTabs-tabs-1" variant="scrollable">
                              <EventListener target="window" onResize={[Function: debounced]} />
                              <div className="MuiTabs-flexContainer-42 RSFTabsRow-centered-40">
                                <div className="MuiTabs-scroller-44 RSFTabsRow-scroller-38 MuiTabs-fixed-45" style={{...}} role="tablist" onScroll={[Function: debounced]}>
                                  <div className="MuiTabs-flexContainer-42 RSFTabsRow-centered-40">
                                    <WithStyles(NavTab) text="Tab 1" url="/1" state="{"page":"product"}" className={{...}} image={{...}} items={{...}} root={false} server={false} prefetch={{...}} loading={false} lazyItemsURL={{...}} expanded={false} classes={{...}} item={{...}} selected={false} onMouseEnter={[Function]} onMouseLeave={[Function]} onItemClick={[Function]} onClick={[Function]} fullWidth={false} indicator={false} onChange={[Function]} textColor="inherit" value={0}>
                                      <NavTab text="Tab 1" url="/1" state="{"page":"product"}" className={{...}} image={{...}} items={{...}} root={false} server={false} prefetch={{...}} loading={false} lazyItemsURL={{...}} expanded={false} item={{...}} selected={false} onMouseEnter={[Function]} onMouseLeave={[Function]} onItemClick={[Function]} onClick={[Function]} fullWidth={false} indicator={false} onChange={[Function]} textColor="inherit" value={0} classes={{...}}>
                                        <inject-Track-with-app event="topNavClicked" item={{...}}>
                                          <Track event="topNavClicked" item={{...}} app={{...}} trigger="onClick" onSuccess={[Function]} ampData={{...}}>
                                            <div className="RSFNavTab-tabWrapper-56" onClick={[Function]}>
                                              <WithStyles(inject-Link) state={[Function]} className="RSFNavTab-link-53" to="/1" prefetch={{...}} onClick={[Function]} anchorProps={{...}}>
                                                <inject-Link state={[Function]} className="RSFNavTab-link-53" to="/1" prefetch={{...}} onClick={[Function]} anchorProps={{...}} classes={{...}}>
                                                  <Link state={[Function]} className="RSFNavTab-link-53" to="/1" prefetch={{...}} onClick={[Function]} anchorProps={{...}} classes={{...}} history={{...}} router={{...}} location={{...}}>
                                                    <a onMouseEnter={[Function]} onMouseLeave={[Function]} data-th="nav" data-moov-link="on" className="RSFLink-root-58 RSFNavTab-link-53" style={[undefined]} onClick={[Function]} href="https://example.com/1">
                                                      <WithStyles(Tab) className="RSFNavTab-root-50 RSFTabsRow-tab-36 RSFNavTabs-tab-5" label="Tab 1" classes={{...}}>
                                                        <Tab className="RSFNavTab-root-50 RSFTabsRow-tab-36 RSFNavTabs-tab-5" label="Tab 1" classes={{...}} disabled={false} textColor="inherit">
                                                          <WithStyles(ButtonBase) focusRipple={true} className="MuiTab-root-59 MuiTab-textColorInherit-61 RSFNavTab-root-50 RSFTabsRow-tab-36 RSFNavTabs-tab-5" role="tab" aria-selected={[undefined]} disabled={false} onClick={[Function]}>
                                                            <ButtonBase focusRipple={true} className="MuiTab-root-59 MuiTab-textColorInherit-61 RSFNavTab-root-50 RSFTabsRow-tab-36 RSFNavTabs-tab-5" role="tab" aria-selected={[undefined]} disabled={false} onClick={[Function]} classes={{...}} centerRipple={false} component="button" disableRipple={false} disableTouchRipple={false} tabIndex="0" type="button">
                                                              <button className="MuiButtonBase-root-71 MuiTab-root-59 MuiTab-textColorInherit-61 RSFNavTab-root-50 RSFTabsRow-tab-36 RSFNavTabs-tab-5" onBlur={[Function]} onFocus={[Function]} onKeyDown={[Function]} onKeyUp={[Function]} onMouseDown={[Function]} onMouseLeave={[Function]} onMouseUp={[Function]} onTouchEnd={[Function]} onTouchMove={[Function]} onTouchStart={[Function]} tabIndex="0" type="button" disabled={false} role="tab" aria-selected={[undefined]} onClick={[Function]}>
                                                                <span className="MuiTab-wrapper-67">
                                                                  <span className="MuiTab-labelContainer-68">
                                                                    <span className="MuiTab-label-69 RSFNavTab-label-52">
                                                                      Tab 1
                                                                    </span>
                                                                  </span>
                                                                </span>
                                                                <NoSsr defer={false} fallback={{...}}>
                                                                  <WithStyles(TouchRipple) innerRef={[Function]} center={false}>
                                                                    <TouchRipple center={false} classes={{...}}>
                                                                      <TransitionGroup component="span" enter={true} exit={true} className="MuiTouchRipple-root-74" childFactory={[Function: childFactory]}>
                                                                        <span className="MuiTouchRipple-root-74" />
                                                                      </TransitionGroup>
                                                                    </TouchRipple>
                                                                  </WithStyles(TouchRipple)>
                                                                </NoSsr>
                                                              </button>
                                                            </ButtonBase>
                                                          </WithStyles(ButtonBase)>
                                                        </Tab>
                                                      </WithStyles(Tab)>
                                                    </a>
                                                  </Link>
                                                </inject-Link>
                                              </WithStyles(inject-Link)>
                                            </div>
                                          </Track>
                                        </inject-Track-with-app>
                                      </NavTab>
                                    </WithStyles(NavTab)>
                                    <WithStyles(NavTab) text="Tab 1" url="/2" state="{"page":"product"}" className={{...}} image={{...}} items={{...}} root={false} server={false} prefetch={{...}} loading={false} lazyItemsURL={{...}} expanded={false} classes={{...}} item={{...}} selected={false} onMouseEnter={[Function]} onMouseLeave={[Function]} onItemClick={[Function]} onClick={[Function]} fullWidth={false} indicator={false} onChange={[Function]} textColor="inherit" value={1}>
                                      <NavTab text="Tab 1" url="/2" state="{"page":"product"}" className={{...}} image={{...}} items={{...}} root={false} server={false} prefetch={{...}} loading={false} lazyItemsURL={{...}} expanded={false} item={{...}} selected={false} onMouseEnter={[Function]} onMouseLeave={[Function]} onItemClick={[Function]} onClick={[Function]} fullWidth={false} indicator={false} onChange={[Function]} textColor="inherit" value={1} classes={{...}}>
                                        <inject-Track-with-app event="topNavClicked" item={{...}}>
                                          <Track event="topNavClicked" item={{...}} app={{...}} trigger="onClick" onSuccess={[Function]} ampData={{...}}>
                                            <div className="RSFNavTab-tabWrapper-56" onClick={[Function]}>
                                              <WithStyles(inject-Link) state={[Function]} className="RSFNavTab-link-53" to="/2" prefetch={{...}} onClick={[Function]} anchorProps={{...}}>
                                                <inject-Link state={[Function]} className="RSFNavTab-link-53" to="/2" prefetch={{...}} onClick={[Function]} anchorProps={{...}} classes={{...}}>
                                                  <Link state={[Function]} className="RSFNavTab-link-53" to="/2" prefetch={{...}} onClick={[Function]} anchorProps={{...}} classes={{...}} history={{...}} router={{...}} location={{...}}>
                                                    <a onMouseEnter={[Function]} onMouseLeave={[Function]} data-th="nav" data-moov-link="on" className="RSFLink-root-58 RSFNavTab-link-53" style={[undefined]} onClick={[Function]} href="https://example.com/2">
                                                      <WithStyles(Tab) className="RSFNavTab-root-50 RSFTabsRow-tab-36 RSFNavTabs-tab-5" label="Tab 1" classes={{...}}>
                                                        <Tab className="RSFNavTab-root-50 RSFTabsRow-tab-36 RSFNavTabs-tab-5" label="Tab 1" classes={{...}} disabled={false} textColor="inherit">
                                                          <WithStyles(ButtonBase) focusRipple={true} className="MuiTab-root-59 MuiTab-textColorInherit-61 RSFNavTab-root-50 RSFTabsRow-tab-36 RSFNavTabs-tab-5" role="tab" aria-selected={[undefined]} disabled={false} onClick={[Function]}>
                                                            <ButtonBase focusRipple={true} className="MuiTab-root-59 MuiTab-textColorInherit-61 RSFNavTab-root-50 RSFTabsRow-tab-36 RSFNavTabs-tab-5" role="tab" aria-selected={[undefined]} disabled={false} onClick={[Function]} classes={{...}} centerRipple={false} component="button" disableRipple={false} disableTouchRipple={false} tabIndex="0" type="button">
                                                              <button className="MuiButtonBase-root-71 MuiTab-root-59 MuiTab-textColorInherit-61 RSFNavTab-root-50 RSFTabsRow-tab-36 RSFNavTabs-tab-5" onBlur={[Function]} onFocus={[Function]} onKeyDown={[Function]} onKeyUp={[Function]} onMouseDown={[Function]} onMouseLeave={[Function]} onMouseUp={[Function]} onTouchEnd={[Function]} onTouchMove={[Function]} onTouchStart={[Function]} tabIndex="0" type="button" disabled={false} role="tab" aria-selected={[undefined]} onClick={[Function]}>
                                                                <span className="MuiTab-wrapper-67">
                                                                  <span className="MuiTab-labelContainer-68">
                                                                    <span className="MuiTab-label-69 RSFNavTab-label-52">
                                                                      Tab 1
                                                                    </span>
                                                                  </span>
                                                                </span>
                                                                <NoSsr defer={false} fallback={{...}}>
                                                                  <WithStyles(TouchRipple) innerRef={[Function]} center={false}>
                                                                    <TouchRipple center={false} classes={{...}}>
                                                                      <TransitionGroup component="span" enter={true} exit={true} className="MuiTouchRipple-root-74" childFactory={[Function: childFactory]}>
                                                                        <span className="MuiTouchRipple-root-74" />
                                                                      </TransitionGroup>
                                                                    </TouchRipple>
                                                                  </WithStyles(TouchRipple)>
                                                                </NoSsr>
                                                              </button>
                                                            </ButtonBase>
                                                          </WithStyles(ButtonBase)>
                                                        </Tab>
                                                      </WithStyles(Tab)>
                                                    </a>
                                                  </Link>
                                                </inject-Link>
                                              </WithStyles(inject-Link)>
                                            </div>
                                          </Track>
                                        </inject-Track-with-app>
                                      </NavTab>
                                    </WithStyles(NavTab)>
                                  </div>
                                  <WithStyles(TabIndicator) className="MuiTabs-indicator-49 RSFTabsRow-indicator-33 RSFTabsRow-noSelection-34" color="secondary" style={{...}}>
                                    <TabIndicator className="MuiTabs-indicator-49 RSFTabsRow-indicator-33 RSFTabsRow-noSelection-34" color="secondary" style={{...}} classes={{...}}>
                                      <span className="MuiPrivateTabIndicator-root-81 MuiPrivateTabIndicator-colorSecondary-83 MuiTabs-indicator-49 RSFTabsRow-indicator-33 RSFTabsRow-noSelection-34" style={{...}} />
                                    </TabIndicator>
                                  </WithStyles(TabIndicator)>
                                </div>
                              </div>
                            </div>
                          </Tabs>
                        </WithStyles(Tabs)>
                      </TabsRow>
                    </inject-TabsRow-with-app>
                  </WithStyles(inject-TabsRow-with-app)>
                </div>
              </Paper>
            </WithStyles(Paper)>
          </NavTabs>
        </inject-NavTabs>
      </WithStyles(inject-NavTabs)>
    </MuiThemeProviderOld>
  </Provider>
</TestProvider>
`;

exports[`NavTabs uses prefetch 1`] = `
<TestProvider app={{...}}>
  <Provider router={{...}} app={{...}} history={{...}} nextId={[Function: nextId]}>
    <MuiThemeProviderOld theme={{...}}>
      <WithStyles(inject-NavTabs)>
        <inject-NavTabs classes={{...}}>
          <NavTabs classes={{...}} tabs={{...}} history={{...}} elevation={2}>
            <WithStyles(Paper) className="RSFNavTabs-root-85" elevation={2}>
              <Paper className="RSFNavTabs-root-85" elevation={2} classes={{...}} component="div" square={false}>
                <div className="MuiPaper-root-89 MuiPaper-elevation2-93 MuiPaper-rounded-90 RSFNavTabs-root-85">
                  <WithStyles(inject-TabsRow-with-app) initialSelectedIdx={{...}} onTabChange={[Function]} items={{...}} tabRenderer={[Function]} centered={true} classes={{...}}>
                    <inject-TabsRow-with-app initialSelectedIdx={{...}} onTabChange={[Function]} items={{...}} tabRenderer={[Function]} centered={true} classes={{...}}>
                      <TabsRow initialSelectedIdx={{...}} onTabChange={[Function]} items={{...}} tabRenderer={[Function]} centered={true} classes={{...}} app={{...}} variant="scrollable">
                        <WithStyles(Tabs) value={false} onChange={[Function]} indicatorColor="secondary" variant="scrollable" className="RSFTabsRow-root-118 RSFNavTabs-tabs-84" classes={{...}}>
                          <Tabs value={false} onChange={[Function]} indicatorColor="secondary" variant="scrollable" className="RSFTabsRow-root-118 RSFNavTabs-tabs-84" theme={{...}} classes={{...}} centered={false} component="div" fullWidth={false} scrollable={false} ScrollButtonComponent={[Function: WithStyles]} scrollButtons="auto" textColor="inherit">
                            <div className="MuiTabs-root-124 RSFTabsRow-root-118 RSFNavTabs-tabs-84 RSFTabsRow-root-118 RSFNavTabs-tabs-84" variant="scrollable">
                              <EventListener target="window" onResize={[Function: debounced]} />
                              <div className="MuiTabs-flexContainer-125 RSFTabsRow-centered-123">
                                <div className="MuiTabs-scroller-127 RSFTabsRow-scroller-121 MuiTabs-fixed-128" style={{...}} role="tablist" onScroll={[Function: debounced]}>
                                  <div className="MuiTabs-flexContainer-125 RSFTabsRow-centered-123">
                                    <WithStyles(NavTab) text="Tab 1" url="/1" state="{"page":"product"}" className={{...}} image={{...}} items={{...}} root={false} server={false} prefetch="always" loading={false} lazyItemsURL={{...}} expanded={false} classes={{...}} item={{...}} selected={false} onMouseEnter={[Function]} onMouseLeave={[Function]} onItemClick={[Function]} onClick={[Function]} fullWidth={false} indicator={false} onChange={[Function]} textColor="inherit" value={0}>
                                      <NavTab text="Tab 1" url="/1" state="{"page":"product"}" className={{...}} image={{...}} items={{...}} root={false} server={false} prefetch="always" loading={false} lazyItemsURL={{...}} expanded={false} item={{...}} selected={false} onMouseEnter={[Function]} onMouseLeave={[Function]} onItemClick={[Function]} onClick={[Function]} fullWidth={false} indicator={false} onChange={[Function]} textColor="inherit" value={0} classes={{...}}>
                                        <inject-Track-with-app event="topNavClicked" item={{...}}>
                                          <Track event="topNavClicked" item={{...}} app={{...}} trigger="onClick" onSuccess={[Function]} ampData={{...}}>
                                            <div className="RSFNavTab-tabWrapper-139" onClick={[Function]}>
                                              <WithStyles(inject-Link) state={[Function]} className="RSFNavTab-link-136" to="/1" prefetch="always" onClick={[Function]} anchorProps={{...}}>
                                                <inject-Link state={[Function]} className="RSFNavTab-link-136" to="/1" prefetch="always" onClick={[Function]} anchorProps={{...}} classes={{...}}>
                                                  <Link state={[Function]} className="RSFNavTab-link-136" to="/1" prefetch="always" onClick={[Function]} anchorProps={{...}} classes={{...}} history={{...}} router={{...}} location={{...}}>
                                                    <a onMouseEnter={[Function]} onMouseLeave={[Function]} data-th="nav" data-moov-link="on" className="RSFLink-root-141 RSFNavTab-link-136" style={[undefined]} onClick={[Function]} href="https://example.com/1" data-rsf-prefetch="always">
                                                      <WithStyles(Tab) className="RSFNavTab-root-133 RSFTabsRow-tab-119 RSFNavTabs-tab-88" label="Tab 1" classes={{...}}>
                                                        <Tab className="RSFNavTab-root-133 RSFTabsRow-tab-119 RSFNavTabs-tab-88" label="Tab 1" classes={{...}} disabled={false} textColor="inherit">
                                                          <WithStyles(ButtonBase) focusRipple={true} className="MuiTab-root-142 MuiTab-textColorInherit-144 RSFNavTab-root-133 RSFTabsRow-tab-119 RSFNavTabs-tab-88" role="tab" aria-selected={[undefined]} disabled={false} onClick={[Function]}>
                                                            <ButtonBase focusRipple={true} className="MuiTab-root-142 MuiTab-textColorInherit-144 RSFNavTab-root-133 RSFTabsRow-tab-119 RSFNavTabs-tab-88" role="tab" aria-selected={[undefined]} disabled={false} onClick={[Function]} classes={{...}} centerRipple={false} component="button" disableRipple={false} disableTouchRipple={false} tabIndex="0" type="button">
                                                              <button className="MuiButtonBase-root-154 MuiTab-root-142 MuiTab-textColorInherit-144 RSFNavTab-root-133 RSFTabsRow-tab-119 RSFNavTabs-tab-88" onBlur={[Function]} onFocus={[Function]} onKeyDown={[Function]} onKeyUp={[Function]} onMouseDown={[Function]} onMouseLeave={[Function]} onMouseUp={[Function]} onTouchEnd={[Function]} onTouchMove={[Function]} onTouchStart={[Function]} tabIndex="0" type="button" disabled={false} role="tab" aria-selected={[undefined]} onClick={[Function]}>
                                                                <span className="MuiTab-wrapper-150">
                                                                  <span className="MuiTab-labelContainer-151">
                                                                    <span className="MuiTab-label-152 RSFNavTab-label-135">
                                                                      Tab 1
                                                                    </span>
                                                                  </span>
                                                                </span>
                                                                <NoSsr defer={false} fallback={{...}}>
                                                                  <WithStyles(TouchRipple) innerRef={[Function]} center={false}>
                                                                    <TouchRipple center={false} classes={{...}}>
                                                                      <TransitionGroup component="span" enter={true} exit={true} className="MuiTouchRipple-root-157" childFactory={[Function: childFactory]}>
                                                                        <span className="MuiTouchRipple-root-157" />
                                                                      </TransitionGroup>
                                                                    </TouchRipple>
                                                                  </WithStyles(TouchRipple)>
                                                                </NoSsr>
                                                              </button>
                                                            </ButtonBase>
                                                          </WithStyles(ButtonBase)>
                                                        </Tab>
                                                      </WithStyles(Tab)>
                                                    </a>
                                                  </Link>
                                                </inject-Link>
                                              </WithStyles(inject-Link)>
                                            </div>
                                          </Track>
                                        </inject-Track-with-app>
                                      </NavTab>
                                    </WithStyles(NavTab)>
                                    <WithStyles(NavTab) text="Tab 1" url="/2" state="{"page":"product"}" className={{...}} image={{...}} items={{...}} root={false} server={false} prefetch="visible" loading={false} lazyItemsURL={{...}} expanded={false} classes={{...}} item={{...}} selected={false} onMouseEnter={[Function]} onMouseLeave={[Function]} onItemClick={[Function]} onClick={[Function]} fullWidth={false} indicator={false} onChange={[Function]} textColor="inherit" value={1}>
                                      <NavTab text="Tab 1" url="/2" state="{"page":"product"}" className={{...}} image={{...}} items={{...}} root={false} server={false} prefetch="visible" loading={false} lazyItemsURL={{...}} expanded={false} item={{...}} selected={false} onMouseEnter={[Function]} onMouseLeave={[Function]} onItemClick={[Function]} onClick={[Function]} fullWidth={false} indicator={false} onChange={[Function]} textColor="inherit" value={1} classes={{...}}>
                                        <inject-Track-with-app event="topNavClicked" item={{...}}>
                                          <Track event="topNavClicked" item={{...}} app={{...}} trigger="onClick" onSuccess={[Function]} ampData={{...}}>
                                            <div className="RSFNavTab-tabWrapper-139" onClick={[Function]}>
                                              <WithStyles(inject-Link) state={[Function]} className="RSFNavTab-link-136" to="/2" prefetch="visible" onClick={[Function]} anchorProps={{...}}>
                                                <inject-Link state={[Function]} className="RSFNavTab-link-136" to="/2" prefetch="visible" onClick={[Function]} anchorProps={{...}} classes={{...}}>
                                                  <Link state={[Function]} className="RSFNavTab-link-136" to="/2" prefetch="visible" onClick={[Function]} anchorProps={{...}} classes={{...}} history={{...}} router={{...}} location={{...}}>
                                                    <VisibilitySensor onChange={[Function]} partialVisibility={true} active={true} minTopValue={0} scrollCheck={false} scrollDelay={250} scrollThrottle={-1} resizeCheck={false} resizeDelay={250} resizeThrottle={-1} intervalCheck={true} intervalDelay={100} delayedCall={false} offset={{...}} containment={{...}}>
                                                      <a onMouseEnter={[Function]} onMouseLeave={[Function]} data-th="nav" data-moov-link="on" className="RSFLink-root-141 RSFNavTab-link-136" style={[undefined]} onClick={[Function]} href="https://example.com/2" data-rsf-prefetch="visible">
                                                        <WithStyles(Tab) className="RSFNavTab-root-133 RSFTabsRow-tab-119 RSFNavTabs-tab-88" label="Tab 1" classes={{...}}>
                                                          <Tab className="RSFNavTab-root-133 RSFTabsRow-tab-119 RSFNavTabs-tab-88" label="Tab 1" classes={{...}} disabled={false} textColor="inherit">
                                                            <WithStyles(ButtonBase) focusRipple={true} className="MuiTab-root-142 MuiTab-textColorInherit-144 RSFNavTab-root-133 RSFTabsRow-tab-119 RSFNavTabs-tab-88" role="tab" aria-selected={[undefined]} disabled={false} onClick={[Function]}>
                                                              <ButtonBase focusRipple={true} className="MuiTab-root-142 MuiTab-textColorInherit-144 RSFNavTab-root-133 RSFTabsRow-tab-119 RSFNavTabs-tab-88" role="tab" aria-selected={[undefined]} disabled={false} onClick={[Function]} classes={{...}} centerRipple={false} component="button" disableRipple={false} disableTouchRipple={false} tabIndex="0" type="button">
                                                                <button className="MuiButtonBase-root-154 MuiTab-root-142 MuiTab-textColorInherit-144 RSFNavTab-root-133 RSFTabsRow-tab-119 RSFNavTabs-tab-88" onBlur={[Function]} onFocus={[Function]} onKeyDown={[Function]} onKeyUp={[Function]} onMouseDown={[Function]} onMouseLeave={[Function]} onMouseUp={[Function]} onTouchEnd={[Function]} onTouchMove={[Function]} onTouchStart={[Function]} tabIndex="0" type="button" disabled={false} role="tab" aria-selected={[undefined]} onClick={[Function]}>
                                                                  <span className="MuiTab-wrapper-150">
                                                                    <span className="MuiTab-labelContainer-151">
                                                                      <span className="MuiTab-label-152 RSFNavTab-label-135">
                                                                        Tab 1
                                                                      </span>
                                                                    </span>
                                                                  </span>
                                                                  <NoSsr defer={false} fallback={{...}}>
                                                                    <WithStyles(TouchRipple) innerRef={[Function]} center={false}>
                                                                      <TouchRipple center={false} classes={{...}}>
                                                                        <TransitionGroup component="span" enter={true} exit={true} className="MuiTouchRipple-root-157" childFactory={[Function: childFactory]}>
                                                                          <span className="MuiTouchRipple-root-157" />
                                                                        </TransitionGroup>
                                                                      </TouchRipple>
                                                                    </WithStyles(TouchRipple)>
                                                                  </NoSsr>
                                                                </button>
                                                              </ButtonBase>
                                                            </WithStyles(ButtonBase)>
                                                          </Tab>
                                                        </WithStyles(Tab)>
                                                      </a>
                                                    </VisibilitySensor>
                                                  </Link>
                                                </inject-Link>
                                              </WithStyles(inject-Link)>
                                            </div>
                                          </Track>
                                        </inject-Track-with-app>
                                      </NavTab>
                                    </WithStyles(NavTab)>
                                  </div>
                                  <WithStyles(TabIndicator) className="MuiTabs-indicator-132 RSFTabsRow-indicator-116 RSFTabsRow-noSelection-117" color="secondary" style={{...}}>
                                    <TabIndicator className="MuiTabs-indicator-132 RSFTabsRow-indicator-116 RSFTabsRow-noSelection-117" color="secondary" style={{...}} classes={{...}}>
                                      <span className="MuiPrivateTabIndicator-root-164 MuiPrivateTabIndicator-colorSecondary-166 MuiTabs-indicator-132 RSFTabsRow-indicator-116 RSFTabsRow-noSelection-117" style={{...}} />
                                    </TabIndicator>
                                  </WithStyles(TabIndicator)>
                                </div>
                              </div>
                            </div>
                          </Tabs>
                        </WithStyles(Tabs)>
                      </TabsRow>
                    </inject-TabsRow-with-app>
                  </WithStyles(inject-TabsRow-with-app)>
                </div>
              </Paper>
            </WithStyles(Paper)>
          </NavTabs>
        </inject-NavTabs>
      </WithStyles(inject-NavTabs)>
    </MuiThemeProviderOld>
  </Provider>
</TestProvider>
`;
